kotlin/programming-kotlin_code/iteration/output/forstringrange.output
forstringrange.kts:1:14: error: for-loop range must have an 'iterator()' method
for (word in "hell".."help") { print("$word, ") } //ERROR
             ^
